--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,8 +1,8 @@
 .card {
   width: 16rem;
   max-height: 20rem;
-  background-color: #1a2838;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  background-color: #1d4b40;
+  box-shadow: 0 4px 12px #1d4b40;
   border-radius: 8px;
   padding: 0.5rem 0.75rem;
   margin: 1rem auto;
@@ -13,11 +13,11 @@
 
   position: relative;
 
-  .imgContainer {
+  .ImgContainer {
     width: 100%;
     max-height: 10rem;
     overflow: hidden;
-    box-shadow: rgba(236, 239, 202, 0.02) 0px 1px 3px 0px,
+    box-shadow: rgba(247, 247, 246, 0.02) 6px 1px 3px 0px,
       rgba(236, 239, 202, 0.15) 0px 0px 0px 1px;
     // padding: 0.25rem;
 
@@ -33,19 +33,21 @@
     overflow: hidden;
   }
 }
-.details {
+.Details {
   width: 100%;
   color: #ffffff;
-  // padding: 0.5rem 0.75rem;
   margin-top: 0.75rem;
   margin-bottom: 1rem;
   p {
+    display: flex;
+    gap:1rem;
     text-align: start;
     margin-bottom: 0.25rem;
     word-wrap:break-word;
-  }
-  span {
-    font-weight: 700;
+    
+    & > *:first-child{
+      font-weight: 700;
+    }
   }
 }
 .buttons {
