--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,12 +7,16 @@
   align-items: center;
 
   padding: 0.75rem 1rem;
+
+  position: sticky;
+  top: 0;
+  z-index: 3;
 }
 .HeaderLeft {
   display: flex;
   gap: 1rem;
 
-  h1{
+  h1 {
     color: #1d4b40;
   }
 }
