--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -17,8 +17,7 @@
     
     overflow-y: auto;
 
-    position: absolute;
-    left: 0;
+    position: fixed;
     top: 0;
     bottom: 0;
     z-index: 4;
