--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -2,28 +2,30 @@
 .Sidebar {
   width: 20rem;
   min-height: 100%;
+  overflow-y: auto;
   display: grid;
   align-items: start;
   place-content: start;
   padding: 0.75rem 1rem;
 
   background-color: #1d4b40;
-
+  
   >div{
     margin-top: 2rem;
   }
 
   h1{
     color: #fff;
+    word-wrap: break-word;
   }
 }
+
 .Bar{
   background-color: transparent;
   color: white;
   justify-self: end;
-
-  margin-right: -2rem;
 }
+
 .List {
   list-style: none;
   display: grid;
@@ -46,6 +48,7 @@
 
   }
 }
+
 .Active{
   background-color: cadetblue;
   text-decoration: underline;
