--- a/src/pages/Admin/Facility/FacilityPage/FacilityPage.module.scss
+++ b/src/pages/Admin/Facility/FacilityPage/FacilityPage.module.scss
@@ -6,11 +6,14 @@
 }
 .Filter {
   display: flex;
+  align-items: flex-start;
   padding: 0.25rem;
   gap: 0.75rem;
   
   select {
     width: 8rem;
+    max-height: 3rem;
+    overflow-y: auto;
     padding: 0.5rem;
     background-color: transparent;
     color: #1d4b40;
