--- a/src/pages/WorkspaceManager/WorkStation/WorkStation.module.scss
+++ b/src/pages/WorkspaceManager/WorkStation/WorkStation.module.scss
@@ -1,1 +1,38 @@
-/* Styles for WorkStation */ 
+.Top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.75rem 1rem;
+}
+.Filter {
+  display: flex;
+  align-items: flex-start;
+  padding: 0.25rem;
+  gap: 0.75rem;
+  
+  select {
+    width: 8rem;
+    max-height: 3rem;
+    overflow-y: auto;
+    padding: 0.5rem;
+    background-color: transparent;
+    color: #1d4b40;
+    font-weight: 700;
+    outline: none;
+    :focus {
+      outline: none;
+    }
+  }
+  input {
+    width: 4rem;
+    background-color: transparent;
+    // border: 2px solid #1d4b40;
+    color: #000;
+    &::placeholder {
+      color: #000;
+    }
+  }
+}
+.Table {
+  padding: 0.5rem;
+}
