--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -4,10 +4,12 @@
   left:0;
   bottom: 0;
   right:0;
+  z-index: 10;
   background-color: rgba($color: #000000, $alpha: 0.63);
 
   display: grid;
   place-content: center;
+  
 }
 .Loader {
   padding: 8rem;
