--- a/src/pages/Admin/Reports/ReportArea/ReportArea.module.scss
+++ b/src/pages/Admin/Reports/ReportArea/ReportArea.module.scss
@@ -14,6 +14,7 @@
     gap:1rem;
 
     div{
+        background-color: #fff;
         box-shadow: 2px 2px 2px 2px #1d4b40;
         padding: 0.25rem 0.5rem;
         border-radius: 16px;
